[package]
name = "rncryptor"
version = "0.1.0"
authors = ["Alfredo Di Napoli <alfredo.dinapoli@gmail.com>"]
repository = "https://github.com/RNCryptor/rncryptor-rs.git"
documentation = "https://docs.rs/rncryptor/"
description = "Rust implementation of the RNCryptor AES file format"
homepage = "http://rncryptor.github.io/"
readme = "README.md"
license = "MIT"

[dependencies]
rust-crypto = "~0.2"
rust_sodium = "~0.1.2"
rand = "~0.3"

[dev-dependencies]
rustc-serialize = "0.3"
quickcheck = "0.4.1"
